fixed z-index issue with emojimart and reaction list

--- a/src/styles/ReactionList.scss
+++ b/src/styles/ReactionList.scss
@@ -31,7 +31,7 @@
     position: absolute;
     right: 15px;
     top: -28px;
-    z-index: 777;
+    z-index: 99;
 
     @extend %background-reaction-list;
 
